create diy-kubernetes-basic as updated and stripped-down version of diy-kubernetes

--- a/roles/kubeadm/handlers/main.yml
+++ b/roles/kubeadm/handlers/main.yml
@@ -1,11 +1,7 @@
 ---
-# handlers file for kubeadm
-
-- name: daemon-reload
-  systemd:
-    daemon_reload: yes
-
-- name: restart kubelet
+- name: enable, reload, and start kubelet
   systemd:
     name: kubelet
     state: restarted
+    enabled: yes
+    daemon_reload: yes
