--- a/roles/kubeadm/vars/main.yml
+++ b/roles/kubeadm/vars/main.yml
@@ -1,13 +1,16 @@
 ---
 # vars file for kubelet
 
-cni_version: 'v0.7.1'
-cni_checksum: 'sha1:fb29e20401d3e9598a1d8e8d7992970a36de5e05'
-kubernetes_version: 'v1.10.5'
-kubelet_checksum: 'sha1:a74b42c2c822df86744f0ecaf2d81982a003d8b5'
-kubectl_checksum: 'sha1:dbe431b2684f8ff4188335b3b3cea185d5a9ec44'
-kubeadm_checksum: 'sha1:c18b917bca94088e95bdad1849f176f7e3c6f05b'
+cni_version: 'v0.7.4'
+cni_checksum: 'sha1:1830ee323cfd360615a6c9efc0ff28c622a6f087'
+
+cri_tools_version: 'v1.13.0'
+cri_tools_checksum: 'sha1:2a9034306f4b13018382bd4ffd1601af0f34b9f7'
+
+kubernetes_version: 'v1.13.4'
+kubelet_checksum: 'sha1:6c43640cd0f4494b4406296fe35579027176b2f7'
+kubectl_checksum: 'sha1:7d1c9510e239ce52f5393c52a4688735e3db791e'
+kubeadm_checksum: 'sha1:efbd31dea5c6ee4ddaf75f0f5a5d81977aeda89c'
+
 kubelet_service_checksum: 'sha1:8ee8cdbea774a52031d113bfe3525e4dc029d134'
-kubelet_service_conf_checksum: 'sha1:1707c1d212dfc68daf37622f8fd9ff2144e4ba11'
-cifs_plugin_version: 'v0.1'
-cifs_plugin_checksum: 'sha1:2a064d735374c071936d2c0e93a0cebe9dab313b'
+kubelet_service_conf_checksum: 'sha1:b5f1188da22006f36694955106c5913c56687a2f'
